--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,6 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -22,4 +20,37 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 24px;
+
+  width: 1128px;
+  user-select: none;
+  list-style: none;
+
+  margin: 0 auto;
+}
+
+img {
+  display: block;
+  max-width: 100%;
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-item {
+  /* width: 360px;
+  height: 200px; */
+  object-fit: contain;
+  transition: transform 0.3s ease-in-out;
+}
+
+.gallery-item:hover,
+.gallery-item:focus {
+  transform: scale(1.1);
 }
