--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -6,7 +6,7 @@
 */
 @import url('./reset.css');
 @import url('./1-gallery.css');
-@import url('simplelightbox/dist/simple-lightbox.min.css');
+/* @import url('simplelightbox/dist/simple-lightbox.min.css'); */
 @import url('./2-form.css');
 
 :root {
